fix action buttons on mobile and palette view

--- a/image-analyser/src/app/components/file-upload/file-upload.component.css
+++ b/image-analyser/src/app/components/file-upload/file-upload.component.css
@@ -12,4 +12,7 @@
 }
 .action-button {
   margin: 0 0.8rem;
+  line-height: 2rem;
+  height: auto;
+  width: auto;
 }
